# ChromaDMX

./: .gitignore  AGENTS.md  CLAUDE.md  PLANNED_UX_IMPROVEMENTS.md  build.gradle.kts  gradle.properties  logcat.txt  patch_button.patch  patch_card.patch  patch_icon_button.patch  plan.md  read_pr.py  renovate.json  settings.gradle.kts
.Jules/: palette.md
.gemini/: config.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  claude-review.yml  claude.yml  ios-release.yml  jules.yml  release.yml
.jules/: bolt.md  palette.md  sentinel.md
android/: build.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
build-logic/convention/: build.gradle.kts
docs/: ble-gatt-service-spec.md  esp32-firmware-reference.md  pixel-showcase.html
docs/plans/: 2026-02-24-chromadmx-architecture-design.md  2026-02-24-issue-breakdown-design.md  2026-02-25-agent-koog-module.md  2026-02-25-compose-ui-module.md  2026-02-25-fixture-profiles-plan.md  2026-02-25-koog-agent-implementation-design.md  2026-02-25-koog-implementation-plan.md  2026-02-25-pixel-mascot-plan.md  2026-02-25-screen-architecture-plan.md  2026-02-25-ux-overhaul-design.md  2026-02-26-pixel-design-system.md  2026-02-26-ux-rewrite-design.md  2026-02-27-full-sweep-fix-design.md  2026-02-27-full-sweep-fix-plan.md  2026-02-27-selectable-app-themes-design.md  2026-02-27-selectable-app-themes-impl.md  2026-02-28-ios-production-release-design.md  2026-02-28-ios-production-release-plan.md  2026-03-02-wled-home-lighting-design.md  2026-03-02-wled-home-lighting-plan.md
docs/release/: signing-setup.md
gradle/: libs.versions.toml
ios/: README.md  project.yml  setup-ios.sh
ios/ChromaDMX/: ChromaDMXApp.swift  ComposeView.swift  Info.plist  PrivacyInfo.xcprivacy
ios/fastlane/: Appfile  Fastfile  Matchfile
shared/: build.gradle.kts
shared/agent/: build.gradle.kts
shared/core/: build.gradle.kts
shared/engine/: build.gradle.kts
shared/networking/: build.gradle.kts
shared/simulation/: build.gradle.kts
shared/subscription/: build.gradle.kts
shared/tempo/src/androidMain/cpp/: CMakeLists.txt  link_jni.cpp
(+498 files in other folders)
